--- a/src/app/components/new-dish-form/new-dish-form.component.html
+++ b/src/app/components/new-dish-form/new-dish-form.component.html
@@ -2,20 +2,20 @@
   <legend>New dish</legend>
   <div class="form-group">
     <label for="nameTxt">Name</label>
-    <input type="text" [value]="name" name="nameTxt" id="nameTxt">
+    <input type="text" (change)='onNameChange($event)' name="nameTxt" id="nameTxt">
   </div>
   <div class="form-group">
     <label for="priceTxt">Price</label>
-    <input type="text" [value]="price" name="priceTxt" id="priceTxt">
+    <input type="number" (change)='onPriceChange($event)' name="priceTxt" id="priceTxt">
   </div>
   <div class="form-group">
     <label for="descriptionTxt">Description</label>
-    <textarea [value]="description" name="descriptionTxt" id="descriptionTxt"></textarea>
+    <textarea (change)='onDescriptionChange($event)' name="descriptionTxt" id="descriptionTxt"></textarea>
   </div>
   <div class="form-group">
     <label for="categoriesSlt">Category</label>
-    <select>
-      <option [selected]="categoryName" *ngFor='let category of categories' value="category.getTitle()">{{category.getTitle()}}</option>
+    <select (change)='onCategoryChange($event)'>
+      <option *ngFor='let category of categories' [value]='category.getTitle()'>{{category.getTitle()}}</option>
     </select>
   </div>
   <input type="submit" value="Add" (click)='onAdd()'>
